--- a/sixteen-template-19.12.2021/Views/About/Index.cshtml
+++ b/sixteen-template-19.12.2021/Views/About/Index.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="col-md-6">
                 <div class="right-image">
-                    <img src="assets/images/feature-image.jpg" alt="">
+                    <img src="~/images/feature-image.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-6">
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> 
 </div>
 
 
@@ -62,7 +62,7 @@
                 <div class="col-md-4">
                     <div class="team-member">
                         <div class="thumb-container">
-                            <img src="~/assets/images/@item.İmg" alt="">
+                            <img src="~/images/@item.İmg" alt="">
                             <div class="hover-effect">
                                 <div class="hover-content">
                                     <ul class="social-icons">
@@ -144,27 +144,27 @@
             <div class="col-md-12">
                 <div class="owl-clients owl-carousel">
                     <div class="client-item">
-                        <img src="assets/images/client-01.png" alt="1">
+                        <img src="~/images/client-01.png" alt="1">
                     </div>
 
                     <div class="client-item">
-                        <img src="assets/images/client-01.png" alt="2">
+                        <img src="~/images/client-01.png" alt="2">
                     </div>
 
                     <div class="client-item">
-                        <img src="assets/images/client-01.png" alt="3">
+                        <img src="~/images/client-01.png" alt="3">
                     </div>
 
                     <div class="client-item">
-                        <img src="assets/images/client-01.png" alt="4">
+                        <img src="~/images/client-01.png" alt="4">
                     </div>
 
                     <div class="client-item">
-                        <img src="assets/images/client-01.png" alt="5">
+                        <img src="~/images/client-01.png" alt="5">
                     </div>
 
                     <div class="client-item">
-                        <img src="assets/images/client-01.png" alt="6">
+                        <img src="~/images/client-01.png" alt="6">
                     </div>
                 </div>
             </div>
