--- a/sixteen-template-19.12.2021/Views/Home/Index.cshtml
+++ b/sixteen-template-19.12.2021/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
             </div>
             <div class="col-md-4">
                 <div class="product-item">
-                    <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
+                    <a href="#"><img src="~/images/product_01.jpg" alt=""></a>
                     <div class="down-content">
                         <a href="#"><h4>Tittle goes here</h4></a>
                         <h6>$25.75</h6>
@@ -56,7 +56,7 @@
             </div>
             <div class="col-md-4">
                 <div class="product-item">
-                    <a href="#"><img src="assets/images/product_02.jpg" alt=""></a>
+                    <a href="#"><img src="~/images/product_02.jpg" alt=""></a>
                     <div class="down-content">
                         <a href="#"><h4>Tittle goes here</h4></a>
                         <h6>$30.25</h6>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-4">
                 <div class="product-item">
-                    <a href="#"><img src="assets/images/product_03.jpg" alt=""></a>
+                    <a href="#"><img src="~/images/product_03.jpg" alt=""></a>
                     <div class="down-content">
                         <a href="#"><h4>Tittle goes here</h4></a>
                         <h6>$20.45</h6>
@@ -92,7 +92,7 @@
             </div>
             <div class="col-md-4">
                 <div class="product-item">
-                    <a href="#"><img src="assets/images/product_04.jpg" alt=""></a>
+                    <a href="#"><img src="~/images/product_04.jpg" alt=""></a>
                     <div class="down-content">
                         <a href="#"><h4>Tittle goes here</h4></a>
                         <h6>$15.25</h6>
@@ -110,7 +110,7 @@
             </div>
             <div class="col-md-4">
                 <div class="product-item">
-                    <a href="#"><img src="assets/images/product_05.jpg" alt=""></a>
+                    <a href="#"><img src="~/images/product_05.jpg" alt=""></a>
                     <div class="down-content">
                         <a href="#"><h4>Tittle goes here</h4></a>
                         <h6>$12.50</h6>
@@ -128,7 +128,7 @@
             </div>
             <div class="col-md-4">
                 <div class="product-item">
-                    <a href="#"><img src="assets/images/product_06.jpg" alt=""></a>
+                    <a href="#"><img src="~/images/product_06.jpg" alt=""></a>
                     <div class="down-content">
                         <a href="#"><h4>Tittle goes here</h4></a>
                         <h6>$22.50</h6>
@@ -172,7 +172,7 @@
             </div>
             <div class="col-md-6">
                 <div class="right-image">
-                    <img src="assets/images/feature-image.jpg" alt="">
+                    <img src="~/images/feature-image.jpg" alt="">
                 </div>
             </div>
         </div>
