--- a/sixteen-template-19.12.2021/Views/_ViewImports.cshtml
+++ b/sixteen-template-19.12.2021/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using sixteen_template_19._12._2021
 @using sixteen_template_19._12._2021.Models
+@using sixteen_template_19._12._2021.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
