--- a/sixteen-template-19.12.2021/Views/Shared/_ProductPartial.cshtml
+++ b/sixteen-template-19.12.2021/Views/Shared/_ProductPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@model VmProductPartial
 
 
+
     <div class="products">
         <div class="container">
             <div class="row">
@@ -31,6 +32,7 @@
                                             <li><i class="fa fa-star"></i></li>
                                             <li><i class="fa fa-star"></i></li>
                                         </ul>
+                                        <a  asp-controller="shopping" asp-action="AddToCart" asp-></a>
                                         <span>Reviews (12)</span>
                                     </div>
                                 </div>
