--- a/sixteen-template-19.12.2021/Views/_ViewImports.cshtml
+++ b/sixteen-template-19.12.2021/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using sixteen_template_19._12._2021
 @using sixteen_template_19._12._2021.Models
 @using sixteen_template_19._12._2021.ViewModels
+@using Microsoft.AspNetCore.Http;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
