--- a/sixteen-template-19.12.2021/Views/Shared/_Layout.cshtml
+++ b/sixteen-template-19.12.2021/Views/Shared/_Layout.cshtml
@@ -1,5 +1,13 @@
-﻿@{ string controller = this.ViewContext.RouteData.Values["controller"].ToString();
+﻿@inject IHttpContextAccessor HttpContextAccessor
+@{ string controller = this.ViewContext.RouteData.Values["controller"].ToString();
+    string cart = HttpContextAccessor.HttpContext.Request.Cookies["cart"];
+    string BasketCount ="";
+    if(!string.IsNullOrEmpty(cart))
+    {
+        BasketCount = cart.Split("-").Length.ToString();
     }
+}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -44,7 +52,7 @@
     <header class="">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand @(controller=="Home" ? "active":"")"  asp-controller="Home" asp-action="Index"><h2>Sixteen <em>Clothing</em></h2></a>
+                <a class="navbar-brand @(controller=="Home" ? "active":"")" asp-controller="Home" asp-action="Index"><h2>Sixteen <em>Clothing</em></h2></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -64,6 +72,18 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link @(controller=="Contact"?"active":"")" asp-controller="Contact" asp-action="Index">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link @(controller=="Shop"?"active":"")" asp-controller="Shop" asp-action="Index">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Contact" asp-action="Index">Contact</i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-controller="" asp-action="" class="btn btn-primary position-relative">
+                                <i class="fas fa-shopping-basket">@BasketCount</i>
+                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"></span>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -103,7 +123,7 @@
     <script src="~/js/slick.js"></script>
     <script src="~/js/isotope.js"></script>
     <script src="~/js/accordions.js"></script>
-
+    <script src="https://kit.fontawesome.com/bd8fc0f369.js" crossorigin="anonymous"></script>
 
     <script language="text/Javascript">
         cleared[0] = cleared[1] = cleared[2] = 0; //set a cleared flag for each field
